# bento-ppt-skill

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
examples/dify-intro/: .layout  README.md  brief.md  deck-standalone.html  deck.html  deck.pptx  layout.json  outline.json
examples/dify-intro/research/: README.md
reference/: bento-layouts-guide.md  extension-guide.md  image-providers.md  pptx-svg-internals.md  pyramid-outline-prompt.md  theme-authoring.md
scripts/: _paths.py  export.py  fetch.py  lint_cn.py  native_render.py  ppt.py  render.py  shoot.py
scripts/providers/: README.md  __init__.py  base.py  nanobanana.py  unsplash.py  url_download.py
tests/: test_lint_cn.py  test_native_render.py  test_ppt.py  test_render.py
themes/bento-ink/: manifest.json  slide-base.svg.j2
themes/bento-paper/: manifest.json  slide-base.svg.j2
themes/bento-tech/: macros.svg.j2  manifest.json  slide-base.svg.j2
themes/bento-tech/components/: card-compare.svg.j2  card-hero.svg.j2  card-image.svg.j2  card-list.svg.j2  card-quote.svg.j2  card-stack.svg.j2  card-stat.svg.j2  card-text.svg.j2  chart-bar.svg.j2
themes/bento-tech/layouts/: _base.svg.j2
