[project]
name = "bento-ppt-skill"
version = "0.1.0"
description = "Claude Code skill for generating Bento Grid style SVG and PPTX slide decks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "jinja2>=3.1",
    "lxml>=5.0",
    "python-pptx>=1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18",
    "ruff>=0.14",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.10"
files = ["scripts"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
