[project]
name = "bento-ppt-skill"
version = "0.1.0"
description = "Claude Code skill for generating Bento Grid style SVG and PPTX slide decks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "jinja2>=3.1",
    "lxml>=5.0",
    "python-pptx>=1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.14",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E9",   # syntax errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "SIM108",  # ternary is fine
    "SIM118",  # dict.keys() is explicit
    "SIM105",  # try/except/pass for adjustment blocks is deliberate
    "RUF001",  # fullwidth characters in Chinese docstrings/strings
    "RUF002",  # fullwidth characters in Chinese docstrings
    "RUF003",  # fullwidth characters in Chinese comments
    "RUF012",  # mutable class attrs for provider registrations is deliberate
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/providers/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "assert_never",
]

[tool.mypy]
python_version = "3.10"
files = ["scripts"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
